added 3.1.5 auto param search, added example, with useful funfacts and notes

--- a/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
+++ b/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
@@ -2092,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "bc158bb4-4e30-4624-9fe6-624d198de141",
    "metadata": {},
    "outputs": [
@@ -2100,7 +2100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': array([0.00689983, 0.00723624, 0.00536823, 0.00484586, 0.00484324]), 'score_time': array([0.00065804, 0.00042796, 0.00034094, 0.000283  , 0.00036192]), 'test_score': array([1., 1., 1., 1., 1.])}\n"
+      "{'fit_time': array([0.00743222, 0.00538516, 0.00479507, 0.00538397, 0.00521326]), 'score_time': array([0.00046182, 0.00047684, 0.00037885, 0.00036287, 0.00025296]), 'test_score': array([1., 1., 1., 1., 1.])}\n"
      ]
     },
     {
@@ -2109,7 +2109,7 @@
        "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2132,9 +2132,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fd49466-a3f5-4cee-a1cb-0908122dc826",
+   "metadata": {},
+   "source": [
+    "#### 3.1.5 Automatic parameter search \n",
+    "* All estimators have tunable parameters. These are also known as hyper-parameters.\n",
+    "* The estimators have what is called generalization power. And this can depend crtically on a few parameters.\n",
+    "* In the RandomForestRegressor, *n_estimators* is a parameter that determines the number of trees in the forest and *max_depth* is a parameter that determines each of the tree's max depth.\n",
+    "* And more often than not, it is unclear as to what the exact value of these critical parameters ought to be. The values generally depend on the data at hand.\n",
+    "* scikit-learn provides tools to automatically find the best parameter combinations via cross-validation.\n",
+    "Example: RandomizedSearchCV for RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "df0083f5-b05d-4e5e-890c-8528f0589c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomizedSearchCV(estimator=RandomForestRegressor(random_state=0), n_iter=5,\n",
+      "                   param_distributions={'max_depth': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x10e077bd0>,\n",
+      "                                        'n_estimators': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x10e0773f0>},\n",
+      "                   random_state=0)\n",
+      "{'max_depth': 9, 'n_estimators': 4}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8802543927590719"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We randomly search over the parameter space of a random forest with a RandomizedSearchCV object. \n",
+    "# When the search is over, the RandomizedSearchCV behaves as a RandomForestRegressor that has been fitted with the best set of parameters.\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "# create a synthetic dataset\n",
+    "X, y = make_regression(n_samples=10000,\n",
+    "                       n_features=10,\n",
+    "                       noise=0.3,\n",
+    "                       random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+    "\n",
+    "# define the parameter space that will be searched over \n",
+    "param_distributions = {'n_estimators': randint(1,5),\n",
+    "                       'max_depth': randint(5,10)}\n",
+    "\n",
+    "# create a searchCV object and fit it to the data \n",
+    "search = RandomizedSearchCV(estimator=RandomForestRegressor(random_state=0),\n",
+    "                            n_iter=5,\n",
+    "                            param_distributions=param_distributions,\n",
+    "                            random_state=0)\n",
+    "print(search.fit(X_train, y_train))\n",
+    "\n",
+    "print(search.best_params_)\n",
+    "\n",
+    "# the search object now acts like a normal random forest estimator \n",
+    "# with max_depth=9 and n_estimators=4\n",
+    "search.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ef746e5-4c03-461c-988f-6b83b3a45b16",
+   "metadata": {},
+   "source": [
+    "##### Fun fact: Meaning of **ensemble**\n",
+    "##### 1. Meaning of “ensemble” in English\n",
+    "* The word *ensemble* comes from French, meaning “together” or “as a whole”.\n",
+    "* In English, it’s used in contexts like:\n",
+    "    * A music ensemble → a group of musicians performing together.\n",
+    "    * A fashion ensemble → a coordinated outfit.\n",
+    "    * A theater ensemble → a cast of actors working as a team.\n",
+    "* So, the core idea is **a group of things working together to form a whole.**\n",
+    "\n",
+    "##### 2. Meaning of “ensemble” in Machine Learning\n",
+    "* In scikit-learn, the ensemble module provides *ensemble methods* — **techniques that combine multiple models (often called “weak learners”) to create a stronger overall model.**\n",
+    "* Examples in scikit-learn:\n",
+    "    * Bagging (Bootstrap Aggregating):\n",
+    "        * Train the same model (e.g., decision tree) on random subsets of data.\n",
+    "        * Combine their predictions (majority vote or average).\n",
+    "        * Example: BaggingClassifier\n",
+    "    * Random Forest:\n",
+    "        * A popular ensemble of decision trees trained with bagging + randomness.\n",
+    "        * Example: RandomForestClassifier\n",
+    "    * Boosting:\n",
+    "        * Models are trained sequentially, each correcting the mistakes of the previous.\n",
+    "        * Example: AdaBoostClassifier, GradientBoostingClassifier, HistGradientBoostingClassifier\n",
+    "    * Voting / Stacking:\n",
+    "        * Combine predictions from different types of models (e.g., SVM + Logistic Regression + Random Forest).\n",
+    "        * Example: VotingClassifier, StackingClassifier\n",
+    "\n",
+    "##### 3. The Logic of Ensemble Learning\n",
+    "* The logic comes directly from the English meaning:\n",
+    "    * **One weak model may make mistakes.**\n",
+    "    * **Many weak models, combined smartly, can cancel out individual errors and give better predictions.**\n",
+    "    * It’s like:\n",
+    "        * Asking one doctor for a diagnosis vs.\n",
+    "        * Asking a panel of 10 doctors and going with the majority opinion.\n",
+    "* This is why ensemble methods often outperform single models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4d82225-9a52-440f-afd6-77f1de7abe47",
+   "metadata": {},
+   "source": [
+    "##### Fun fact: Meaning of **searchCV**\n",
+    "* **Search**: refers to *hyperparameter search* (trying out different parameter values to find the best model).\n",
+    "* **CV**: stands for *Cross-Validation*, a **resampling method** to evaluate models more reliably by splitting data into multiple train/test folds.\n",
+    "* So, SearchCV = Hyperparameter Search + Cross-Validation.\n",
+    "* Examples in scikit-learn\n",
+    "    1. GridSearchCV\n",
+    "       * Exhaustively tries all combinations of hyperparameters you specify.\n",
+    "       * Example: searching through all max_depth and n_estimators values for a RandomForestClassifier.\n",
+    "    2. RandomizedSearchCV\n",
+    "       * Randomly samples from the parameter space for a fixed number of iterations.\n",
+    "       * Faster when the parameter space is large."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16faa36e-5874-4ae8-b1e1-4781ab01ab25",
+   "metadata": {},
+   "source": [
+    "#### Important Note \n",
+    "* Always prefer searching over a pipeline and not a single estimator.\n",
+    "* Preprocessing the whole dataset before CV leaks test data into training.\n",
+    "* This breaks independence between train/test sets.\n",
+    "* Result: overestimates model performance.\n",
+    "* Pipelines prevent this data leakage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a3abc89-469f-4960-b36e-1f50d50bdf69",
+   "id": "446e0e81-ce3a-4ec2-8e79-1aba8c24c1e6",
    "metadata": {},
    "outputs": [],
    "source": []
