--- a/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
+++ b/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
@@ -2271,7 +2271,7 @@
    "id": "16faa36e-5874-4ae8-b1e1-4781ab01ab25",
    "metadata": {},
    "source": [
-    "#### Important Note \n",
+    "#### Important Note on Searching\n",
     "* Always prefer searching over a pipeline and not a single estimator.\n",
     "* Preprocessing the whole dataset before CV leaks test data into training.\n",
     "* This breaks independence between train/test sets.\n",
@@ -2283,6 +2283,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "446e0e81-ce3a-4ec2-8e79-1aba8c24c1e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2504386-5a50-43ed-943d-d84f4f339785",
    "metadata": {},
    "outputs": [],
    "source": []
