--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -2972,10 +2972,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "92796165-a042-4077-9c7a-abb764438d8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='./hangman_words.txt' mode='r' encoding='UTF-8'>\n",
+      "This file is being written to\n",
+      "['This file is being written to']\n",
+      "<_io.TextIOWrapper name='./hangman_words.txt' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
    "source": [
     "f = open('./hangman_words.txt')\n",
     "print(f)\n",
@@ -3029,7 +3040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "33ec37dc-8aed-4222-ad07-111acd196a46",
    "metadata": {},
    "outputs": [
@@ -3119,6 +3130,7 @@
     }
    ],
    "source": [
+    "# reading a file \n",
     "# Another safer way is to read limited number of characters instead of full line as a line maybe really long! \n",
     "f = open('hangman_words.txt')\n",
     "print(f.read(20))\n",
@@ -3126,41 +3138,216 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a518312e-2ced-43f7-81c3-f88649257a26",
+   "cell_type": "markdown",
+   "id": "7d69c137-d257-49cc-9ac7-318ab9c8e9d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Writing files \n",
+    "* mode r: read\n",
+    "* mode w: write\n",
+    "* mode a: append\n",
+    "* mode r+: read and write (rarely used) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6249a44e-be3e-4f30-9df8-737f7782e803",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# writing to a file \n",
+    "f = open('test_write.txt', 'w')\n",
+    "f.write('This file is being written to')\n",
+    "f.close()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1ac94fa-6580-4564-98e6-3692e777c76e",
+   "cell_type": "markdown",
+   "id": "7f556575-7b45-402e-b698-67763ff0b809",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d443624f-af49-4b51-a42c-7dbaced52cb2",
+   "cell_type": "markdown",
+   "id": "f9a57245-ab2e-4e1c-8685-23a6d776ff94",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29955270-a9a3-4a1b-bc8c-1c49bd10507a",
+   "metadata": {},
+   "source": [
+    "#### File System \n",
+    "* Python uses Linux to perform file-system-type operations (e.g. moving, copying a file or a directory).\n",
+    "* The functions are in **Shell Utility (shutil)** package. These work on directories as well as files. \n",
+    "* Some features also deal with *file permissions* and *metadata*.\n",
+    "* **General uses**: copy, move, rename, remove, search file or directory \n",
+    "* To copy, move, rename a file: **copy**\n",
+    "* To copy, move, rename a directory (including contents): **copytree**\n",
+    "* To remove a directory (including contents): **rmtree** \n",
+    "* To search a directory: **glob**\n",
+    "* To save and load data to file: **pickle**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e089b450-9c1c-419b-9126-464ae2079f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test_copy.txt'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# copying a file \n",
+    "import shutil\n",
+    "shutil.copy('test_write.txt', 'test_copy.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4bf5ff3-58b4-4b69-bbea-0693ac6c2842",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test_rename.txt'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# move or rename a file \n",
+    "import shutil\n",
+    "shutil.copy('test_copy.txt', 'test_rename.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "44af11eb-961f-410f-86dd-8101e96480fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. All text files with extension '.txt' :\n",
+      "['test_write.txt', 'requirements.txt', 'test_copy.txt', 'hangman_words.txt', 'test_rename.txt', 'requirements_full.txt']\n",
+      "2. All the files:\n",
+      "['test_write.txt', 'requirements.txt', 'how-to-python.ipynb', 'test_copy.txt', 'hangman_words.txt', 'test_rename.txt', 'requirements_full.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# globbing (finding files within a directory) \n",
+    "import glob\n",
+    "print(\"1. All text files with extension '.txt' :\")\n",
+    "print(glob.glob('*.txt'))\n",
+    "print('2. All the files:')\n",
+    "print(glob.glob('*.*'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5208db40-0642-4edf-98b0-5ec9b1273404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved: ['a', 123, [4, 5, True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pickling (save and load data between runs of a program) \n",
+    "# SAVE \n",
+    "import pickle \n",
+    "mylist = ['a', 123, [4, 5, True]]\n",
+    "print('saved:', mylist)\n",
+    "# Note: pickle.dump writes bytes, so open the file in binary mode ('wb') for writing and ('rb') for reading.\n",
+    "f = open('mylist.pickle', 'wb')    \n",
+    "pickle.dump(mylist, f)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "00e1a6fc-4383-45fa-8bf5-6a98dec74f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded: ['a', 123, [4, 5, True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pickling \n",
+    "# LOAD \n",
+    "import pickle \n",
+    "f = open('mylist.pickle', 'rb')    # Note: pickle.dump writes bytes, so use 'rb' for reading.\n",
+    "loaded_data = pickle.load(f)\n",
+    "f.close()\n",
+    "print('loaded:', loaded_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7db550ac-5ed0-45be-ac02-936fe387a586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved: [1, 2, 3]\n",
+      "loaded: [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# smarter way of achieving same operations\n",
+    "import pickle\n",
+    "mylist = [1, 2, 3]\n",
+    "\n",
+    "## Saving \n",
+    "print('saved:', mylist)\n",
+    "with open('mylist.pickle', 'wb') as f:\n",
+    "    pickle.dump(mylist, f)\n",
+    "\n",
+    "## Loading \n",
+    "with open('mylist.pickle', 'rb') as f:\n",
+    "    loaded = pickle.load(f)\n",
+    "print('loaded:', loaded)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d6fb6b-bf51-442f-8bb4-fb13d510ac13",
+   "id": "7fe4f076-c24b-4b02-8e3b-af3cebe697e8",
    "metadata": {},
    "outputs": [],
    "source": []
